--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	"require": {
 		"php": ">= 5.3.7",
 		"nette/nette": "~2.3.0",
-		"dg/adminer-custom": "~1.6"
+		"dg/adminer-custom": "~1.6",
+		"kdyby/doctrine": "~2.3"
 	},
 	"require-dev": {
 		"nette/tester": "~1.3"
