--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -20,10 +20,9 @@ session:
 
 
 services:
-	- App\Model\UserManager
 	- App\Forms\SignFormFactory
 	router: App\RouterFactory::createRouter
-
+	authenticator: App\Model\Services\UserService
 
 extensions:
     # add theese four lines
