--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"php": ">= 5.3.7",
 		"nette/nette": "~2.3.0",
 		"dg/adminer-custom": "~1.6",
-		"kdyby/doctrine": "~2.3"
+		"kdyby/doctrine": "~2.3",
+		"majkl578/nette-identity-doctrine": "2.1"
 	},
 	"require-dev": {
 		"nette/tester": "~1.3"
