--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -22,7 +22,7 @@ services:
 	- App\Forms\SignFormFactory
 	- App\Controls\IMenuControlFactory
 	- App\Controls\IChatControlFactory
-	- App\Model\Services\StudentService
+	- App\Forms\StudentFormFactory
 	router: App\RouterFactory::createRouter
 	authenticator: App\Model\Services\UserService
 	authorizator:
