--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -22,10 +22,11 @@ services:
 	- App\Forms\SignFormFactory
 	- App\Controls\IMenuControlFactory
 	- App\Controls\IChatControlFactory
+	- App\Model\Services\SchoolYearService
 	actualityFactory:
-		class: App\Forms\StudentForm(%id%, ...)
+		class: App\Forms\StudentForm(%id%, %currentSchoolYear%, ...)
 		implement: App\Forms\IStudentFormFactory
-		parameters: [id]
+		parameters: [id, currentSchoolYear]
 	router: App\RouterFactory::createRouter
 	authenticator: App\Model\Services\UserService
 	authorizator:
