--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -42,3 +42,4 @@ extensions:
     events: Kdyby\Events\DI\EventsExtension
     annotations: Kdyby\Annotations\DI\AnnotationsExtension
     doctrine: Kdyby\Doctrine\DI\OrmExtension
+    replicator: Kdyby\Replicator\DI\ReplicatorExtension
