submit task form

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -29,6 +29,7 @@ services:
 	- App\Forms\ITaskFormFactory
 	- App\Forms\IStudentFormFactory
 	- App\Forms\IAnswerFormFactory
+	- App\Forms\ISubmitTaskFormFactory
 
 	chatFactory:
 		class: App\Controls\ChatControl(%user%, %year%, ...)
