multiple choice chart

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -21,6 +21,7 @@ session:
 services:
 	- App\Model\Services\StudentService
 	- App\Model\Services\LessonService
+	- App\Model\Services\AnswerService
 
 	- App\Controls\IMenuControlFactory
 	- App\Controls\IPostsControlFactory
