--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -22,6 +22,7 @@ services:
 	- App\Model\Services\StudentService
 	- App\Model\Services\LessonService
 	- App\Model\Services\AnswerService
+	- App\Model\Services\ClassService
 
 	- App\Controls\IMenuControlFactory
 	- App\Controls\IPostsControlFactory
